# ctai

./: .gitignore  CMakeLists.txt  README.md  all_in_one_fibonacci.cpp  eip_change.hpp  execute.hpp  flags.hpp  labels.hpp  machine_state.hpp  main.cpp  register.hpp  stack.hpp  static_warning.hpp  string.hpp  traits.hpp  tuple.hpp
assembler/: assembler.hpp  label_extract.hpp  label_substitute.hpp  labels_extractor.hpp
containers/: queue.hpp  values_container.hpp
ctai/: CMakeLists.txt  declare_code.hpp  eip_change.hpp  execute.hpp  main.cpp  register.hpp  string.hpp
ctai/assembler/: assembler.hpp  label_extract.hpp  label_substitute.hpp
ctai/containers/: values_container.hpp
ctai/doc/: utils.txt
ctai/examples/v1.0/: fobinacci.cpp  hello_world.cpp
ctai/execute/: eip_adjust.hpp  execute_code.hpp  execute_thread.hpp  execution_result.hpp
ctai/execute/instructions/: ex_add.hpp  ex_call.hpp  ex_cmp.hpp  ex_dec.hpp  ex_div.hpp  ex_inc.hpp  ex_je.hpp  ex_jg.hpp  ex_jl.hpp  ex_jmp.hpp  ex_jne.hpp  ex_mov.hpp  ex_mul.hpp  ex_pop.hpp  ex_popa.hpp  ex_push.hpp  ex_pusha.hpp  ex_ret.hpp  ex_sub.hpp  execute_instruction.hpp
ctai/execute/instructions/sys/: ex_sys_create_thread.hpp  ex_sys_exit_thread.hpp  ex_sys_free.hpp  ex_sys_is_thread_running.hpp  ex_sys_malloc.hpp  ex_sys_read.hpp  ex_sys_try_lock_mutex.hpp  ex_sys_write.hpp
ctai/instructions/: ids_vaules.hpp
ctai/instructions/matchers/: add_matcher.hpp  call_matcher.hpp  cmp_matcher.hpp  dec_matcher.hpp  div_matcher.hpp  inc_matcher.hpp  instructions_matchers.hpp  je_matcher.hpp  jg_matcher.hpp  jge_matcher.hpp  jl_matcher.hpp  jmp_matcher.hpp  jne_matcher.hpp  mem_size_decoder.hpp  mov_matcher.hpp  mul_matcher.hpp  operand_decoder.hpp  plus_minus_decoder.hpp  pop_matcher.hpp  popa_matcher.hpp  push_matcher.hpp  pusha_matcher.hpp  ret_matcher.hpp  sub_matcher.hpp  sys_create_thread_matcher.hpp  sys_exit_thread_matcher.hpp  sys_free_matcher.hpp  sys_is_thread_running_matcher.hpp  sys_malloc_matcher.hpp  sys_read_matcher.hpp  sys_try_lock_mutex_matcher.hpp  sys_write_matcher.hpp
ctai/io/: input.hpp  io.hpp  output.hpp
ctai/kernel/: io.hpp  memory.hpp  mutex.hpp  thread.hpp  utils.hpp
ctai/memory/: memory.hpp  memory_alloc.hpp  memory_free.hpp  memory_metadata.hpp
ctai/opcode/: opcodes.hpp
ctai/tests/: tests_main.hpp  tests_memory_alloc.hpp  tests_memory_metadata.hpp  tests_values_container.hpp
ctai/tests/instructions/: tests_instructions.hpp
ctai/tests/instructions/execute/: tests_ex_popa.hpp  tests_ex_pusha.hpp  tests_execute.hpp
ctai/tests/instructions/matchers/: tests_call_matcher.hpp  tests_pusha_matcher.hpp  tests_sys_exit_thread_matcher.hpp
ctai/thread/: scheduler_round_robin.hpp  thread.hpp
ctai/tokenize/: syscalls_tokens.hpp  tokenizer.hpp  tokens.hpp
ctai/tuple/: tuple.hpp
ctai/utils/: bad_value.hpp  mem_reg_operations.hpp  operand_size.hpp
ctai/values/: values.hpp
doc/: helpers.txt  system_calls.txt  utils.txt
examples/v1.0/: hello_world.cpp
examples/v2.0/: multithread_fib_with_sync.cpp  multithread_fib_without_sync.cpp  unrealized_dream.cpp
execute/: eip_adjust.hpp  eip_adjuster.hpp  ex_add.hpp  ex_cmp.hpp  ex_instruction.hpp  ex_jge.hpp  ex_jmp.hpp  ex_mov.hpp  ex_mul.hpp  ex_pop.hpp  ex_push.hpp  ex_sub.hpp  execute_code.hpp  execute_thread.hpp  execution_result.hpp
execute/instructions/: ex_add.hpp  ex_call.hpp  ex_cmp.hpp  ex_dec.hpp  ex_div.hpp  ex_inc.hpp  ex_je.hpp  ex_jg.hpp  ex_jl.hpp  ex_jmp.hpp  ex_jne.hpp  ex_mov.hpp  ex_mul.hpp  ex_pop.hpp  ex_popa.hpp  ex_push.hpp  ex_pusha.hpp  ex_ret.hpp  ex_sub.hpp  execute_instruction.hpp
execute/instructions/sys/: ex_sys_create_thread.hpp  ex_sys_exit_thread.hpp  ex_sys_free.hpp  ex_sys_is_thread_running.hpp  ex_sys_malloc.hpp  ex_sys_read.hpp  ex_sys_try_lock_mutex.hpp  ex_sys_write.hpp
instructions/: decode.hpp  ids_vaules.hpp  instruction.hpp  instructions_matchers.hpp  push.hpp
instructions/matchers/: add_matcher.hpp  call_matcher.hpp  cmp_matcher.hpp  dec_matcher.hpp  div_matcher.hpp  inc_matcher.hpp  instructions_matchers.hpp  je_matcher.hpp  jg_matcher.hpp  jge_matcher.hpp  jl_matcher.hpp  jmp_matcher.hpp  jne_matcher.hpp  mem_size_decoder.hpp  mov_matcher.hpp  mul_matcher.hpp  operand_decoder.hpp  plus_minus_decoder.hpp  pop_matcher.hpp  popa_matcher.hpp  push_matcher.hpp  pusha_matcher.hpp  register_matcher.hpp  ret_matcher.hpp  sub_matcher.hpp  sys_create_thread_matcher.hpp  sys_exit_thread_matcher.hpp  sys_free_matcher.hpp  sys_is_thread_running_matcher.hpp  sys_malloc_matcher.hpp  sys_read_matcher.hpp  sys_try_lock_mutex_matcher.hpp  sys_write_matcher.hpp
io/: input.hpp  output.hpp
kernel/: io.hpp  memory.hpp  mutex.hpp  thread.hpp  utils.hpp
machine/: machine_state.hpp
memory/: memory.hpp  memory_alloc.hpp  memory_free.hpp  memory_metadata.hpp
opcode/: opcodes.hpp
runtime/: io.hpp
syscalls/: sys_malloc.hpp  syscall.hpp
tests/: tests_macros.hpp  tests_main.hpp  tests_memory.hpp  tests_memory_alloc.hpp  tests_memory_metadata.hpp  tests_tuple.hpp  tests_values_container.hpp  values_container_tests.hpp
tests/instructions/: tests_instructions.hpp
tests/instructions/execute/: tests_ex_popa.hpp  tests_ex_pusha.hpp  tests_execute.hpp
tests/instructions/matchers/: tests_call_matcher.hpp  tests_matchers.hpp  tests_pusha_matcher.hpp  tests_sys_exit_thread_matcher.hpp
thread/: scheduler_round_robin.hpp  thread.hpp
tokenize/: syscalls_tokens.hpp  tokenizer.hpp  tokens.hpp  tuple.hpp
tuple/: tuple.hpp
utils/: empty_type.hpp  mem_reg_operations.hpp  operand_size.hpp  predicate.hpp
values/: values.hpp
